# planck

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SHARED_TASK_NOTES.md  planck-phase-b.yaml  planck-sim.toml  planck.yaml  pyproject.toml  readme  rustfmt.toml
crates/planck-core/: Cargo.toml
crates/planck-core/benches/: compile_bench.rs
crates/planck-core/src/: algo.rs  cost.rs  lib.rs  plan.rs  sched.rs  template.rs  topo.rs
crates/planck-core/src/sim/: config.rs  engine.rs  link.rs  mod.rs  timing.rs  trace.rs
crates/planck-python/: Cargo.toml
crates/planck-python/src/: lib.rs
docs/: phase-a-summary.md
docs/plans/: 2026-03-19-pgccl-design.md  2026-03-19-planck-design.md  2026-03-19-planck-v01-implementation.md  2026-03-20-phase-b-macos-design.md  2026-03-20-phase-b-macos-impl.md
python/planck/: __init__.py
python/planck/lib_planck.dylib.dSYM/Contents/: Info.plist
python/planck/lib_planck.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_planck.dylib.yml
tasks/: lessons.md  todo.md
tests/: test_plan_compile.py  test_sim.py
