[package]
name = "planck-core"
version.workspace = true
edition.workspace = true

[features]
sim = ["toml", "serde"]

[dependencies]
toml  = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile_bench"
harness = false
